--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ pyflakes==2.1.1
 pyparsing==3.0.7
 pytest==7.0.1
 pytest-django==3.9.0
+python-dotenv==0.19.2
 pytz==2021.3
 sentry-sdk==1.5.6
 six==1.16.0
